T05: environment control, per-environment child processes and result merging